--- a/app/work.html
+++ b/app/work.html
@@ -102,7 +102,7 @@
       <div class="container">
         <div class="row services-to-filter">
           <div class="col-12 col-lg-6 service-item ppc">
-            <a href="#">
+            <a href="captain-cover.html">
               <figure class="left"><div class="bg-black"></div>
                 <img src="images/case-studies/captain-cover.jpg" alt="">
                 <figcaption><img class="img-fluid" src="images/logos/captain-cover.png" alt=""></figcaption>
@@ -112,11 +112,11 @@
               <span class="small-grey-text">Captain Cover</span>
               <h3>162% increase in conversion rate. </h3>
               <p><strong>Project services:</strong> Pay Per Click</p>
-              <a href="#" class="btn btn-orange">Learn more</a>
+              <a href="captain-cover.html" class="btn btn-orange">Learn more</a>
             </div>
           </div>
           <div class="col-12 col-lg-6 offset-top service-item cro ppc">
-            <a href="#"><figure class="right"><div class="bg-black"></div>
+            <a href="/pretty-green.html"><figure class="right"><div class="bg-black"></div>
               <img src="images/case-studies/pretty-green.jpg">
               <figcaption><img class="img-fluid" src="images/logos/pretty-green.png" alt=""></figcaption>
             </figure></a>
@@ -124,11 +124,11 @@
               <span class="small-grey-text">Pretty green</span>
               <h3>£1 million return from £45k spend. </h3>
               <p><strong>Project services:</strong> PPC, CRO</p>
-              <a href="#" class="btn btn-orange">Learn more</a>
+              <a href="/pretty-green.html" class="btn btn-orange">Learn more</a>
             </div>
           </div>
           <div class="col-12 col-lg-6 service-item seo">
-            <a href="#"><figure class="left"><div class="bg-black"></div>
+            <a href="cmd.html"><figure class="left"><div class="bg-black"></div>
               <img src="images/case-studies/CMD.jpg">
               <figcaption><img class="img-fluid" src="images/logos/cmd.png" alt=""></figcaption>
             </figure></a>
@@ -136,12 +136,12 @@
               <span class="small-grey-text">CMD</span>
               <h3>Maintaining and raising the company’s online profile throughout a rebranding process.</h3>
               <p><strong>Project services:</strong> Search Engine Optimisation, PR</p>
-              <a href="#" class="btn btn-orange">Learn more</a>
+              <a href="cmd.html" class="btn btn-orange">Learn more</a>
             </div>
           </div>
 
           <div class="col-12 col-lg-6 service-item offset-top seo ppc">
-            <a href="#"><figure class="right"><div class="bg-black"></div>
+            <a href="/origin-global.html"><figure class="right"><div class="bg-black"></div>
               <img src="images/case-studies/oarigin-global-bg.jpg" alt="">
               <figcaption><img class="img-fluid" src="images/logos/origin-global.png" alt=""></figcaption>
             </figure></a>
@@ -149,12 +149,12 @@
               <span class="small-grey-text">Origin global</span>
               <h3>Driving the business forward following a complex Google penalty. </h3>
               <p><strong>Project services:</strong> Search Engine Optimisation, Pay Per Click</p>
-              <a href="#" class="btn btn-orange">Learn more</a>
+              <a href="/origin-global.html" class="btn btn-orange">Learn more</a>
             </div>
           </div>
 
           <div class="col-12 col-lg-6 service-item seo ppc">
-            <a href="#"><figure class="left"><div class="bg-black"></div>
+            <a href="/jackson-woodturners.html"><figure class="left"><div class="bg-black"></div>
               <img src="images/case-studies/jackson-woodturners.jpg" alt="">
               <figcaption><img class="img-fluid" src="images/logos/origin-global.png" alt=""></figcaption>
             </figure></a>
@@ -162,38 +162,38 @@
               <span class="small-grey-text">Jackson Woodturners </span>
               <h3>ROI of £19.44 for every pound spent in AdWords. </h3>
               <p><strong>Project services:</strong> Search Engine Optimisation, Pay Per Click</p>
-              <a href="#" class="btn btn-orange">Learn more</a>
+              <a href="/jackson-woodturners.html" class="btn btn-orange">Learn more</a>
             </div>
           </div>
 
           <div class="col-12 col-lg-6 service-item offset-top seo ppc">
-            <a href="#"><figure class="right"><div class="bg-black"></div>
+            <a href="/kitlocker.html"><figure class="right"><div class="bg-black"></div>
               <img src="images/case-studies/Kitlocker.jpg" alt="">
-              <figcaption><img class="img-fluid" src="images/logos/origin-global.png" alt=""></figcaption>
+              <figcaption><img class="img-fluid" src="images/logos/Kitlocker.jpg" alt=""></figcaption>
             </figure></a>
             <div class="service-text">
               <span class="small-grey-text">Kitlocker </span>
               <h3>286% increase in ecommerce revenue. </h3>
               <p><strong>Project services:</strong> Search Engine Optimisation, Pay Per Click</p>
-              <a href="#" class="btn btn-orange">Learn more</a>
+              <a href="/kitlocker.html" class="btn btn-orange">Learn more</a>
             </div>
           </div>
 
           <div class="col-12 col-lg-6 service-item seo ppc">
-            <a href="#"><figure class="left"><div class="bg-black"></div>
+            <a href="/russums.html"><figure class="left"><div class="bg-black"></div>
               <img src="images/case-studies/russums.jpg" alt="">
-              <figcaption><img class="img-fluid" src="images/logos/origin-global.png" alt=""></figcaption>
+              <figcaption><img class="img-fluid" src="images/logos/russums.jpg" alt=""></figcaption>
             </figure></a>
             <div class="service-text">
               <span class="small-grey-text">Russums  </span>
               <h3>– Delivering 25% increase year – on – year in organic traffic. </h3>
               <p><strong>Project services:</strong> Search Engine Optimisation, Pay Per Click</p>
-              <a href="#" class="btn btn-orange">Learn more</a>
+              <a href="/russums.html" class="btn btn-orange">Learn more</a>
             </div>
           </div>
 
           <div class="col-12 col-lg-6 service-item offset-top seo ppc">
-            <a href="#"><figure class="right"><div class="bg-black"></div>
+            <a href="/datatrack-labs.html"><figure class="right"><div class="bg-black"></div>
               <img src="images/case-studies/datatrack-labs.jpg" alt="">
               <figcaption><img class="img-fluid" src="images/logos/origin-global.png" alt=""></figcaption>
             </figure></a>
@@ -201,12 +201,12 @@
               <span class="small-grey-text">Datatrack Labs</span>
               <h3>887.50% YOY increase in goal completions.</h3>
               <p><strong>Project services:</strong> Search Engine Optimisation, Pay Per Click</p>
-              <a href="#" class="btn btn-orange">Learn more</a>
+              <a href="/datatrack-labs.html" class="btn btn-orange">Learn more</a>
             </div>
           </div>
 
           <div class="col-12 col-lg-6 service-item ppc">
-            <a href="#"><figure class="left"><div class="bg-black"></div>
+            <a href="/abaris-international.html"><figure class="left"><div class="bg-black"></div>
               <img src="images/case-studies/abaris.jpg" alt="">
               <figcaption><img class="img-fluid" src="images/logos/origin-global.png" alt=""></figcaption>
             </figure></a>
@@ -214,13 +214,13 @@
               <span class="small-grey-text">Abaris International </span>
               <h3>ROI of £28.53 for every pound spent in AdWords.</h3>
               <p><strong>Project services:</strong> Pay Per Click</p>
-              <a href="#" class="btn btn-orange">Learn more</a>
+              <a href="/abaris-international.html" class="btn btn-orange">Learn more</a>
             </div>
           </div>
 
 
           <div class="col-12 col-lg-6 service-item offset-top ppc">
-            <a href="#"><figure class="right"><div class="bg-black"></div>
+            <a href="/united-carpets.html"><figure class="right"><div class="bg-black"></div>
               <img src="images/case-studies/russums.jpg" alt="">
               <figcaption><img class="img-fluid" src="images/logos/health.png" alt=""></figcaption>
             </figure></a>
@@ -228,11 +228,9 @@
               <span class="small-grey-text">United Carpets </span>
               <h3>Increase conversions month on month by 150%.</h3>
               <p><strong>Project services:</strong> Pay Per Click</p>
-              <a href="#" class="btn btn-orange">Learn more</a>
+              <a href="/united-carpets.html" class="btn btn-orange">Learn more</a>
             </div>
           </div>
-          
-          
         </div>
       </div>
     </section>
