add hover effect, footer

--- a/app/contact.html
+++ b/app/contact.html
@@ -29,16 +29,16 @@
       <nav class="navbar transparent fixed-top">
         <a class="navbar-brand" href="#"><img src="images/logos/logo-white-transparent.png" alt=""></a>
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Search Engine Optimisation <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Pay Per Click</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Conversion Rate Optimisation</a>
-          </li>
-        </ul>
+        <li class="nav-item active">
+          <a class="nav-link" href="#" data-hover="Search Engine Optimisation">Search Engine Optimisation <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" data-hover="Pay Per Click">Pay Per Click</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" data-hover="Conversion Rate Optimisation">Conversion Rate Optimisation</a>
+        </li>
+      </ul>
         <a class="mobile bold d-none" tel="#">0114 272 2444</a>
         
         <div class="sidenav">
