--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,16 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>ignition search</title>
+  <script>
+  (function(d) {
+    var config = {
+      kitId: 'qrm7ucc',
+      scriptTimeout: 3000,
+      async: true
+    },
+    h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
+  })(document);
+</script>
 
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <!-- Place favicon.ico in the root directory -->
@@ -30,13 +40,13 @@
       <a class="navbar-brand" href="#"><img src="images/logos/logo-white-transparent.png" alt=""></a>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Search Engine Optimisation <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="#" data-hover="Search Engine Optimisation">Search Engine Optimisation <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Pay Per Click</a>
+          <a class="nav-link" href="#" data-hover="Pay Per Click">Pay Per Click</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Conversion Rate Optimisation</a>
+          <a class="nav-link" href="#" data-hover="Conversion Rate Optimisation">Conversion Rate Optimisation</a>
         </li>
       </ul>
       <a class="mobile bold d-none" tel="#">0114 272 2444</a>
@@ -243,6 +253,7 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-12 col-md-5 contact-info">
+          <img src="images/logos/small-logo.png" alt="" class="small-logo">
           <h2>Get in touch</h2>
           <div class="col-xs-6">
             <span class="small-grey-text">Office address</span>
@@ -306,8 +317,7 @@
       <div class="row">
         <div class="col-xs-12 col-md-6">
           <h2 class="m-b-40">Be seen Be Found.</h2>
-          <span class="dash-grey"></span>
-          <ul class="social-media list-inline black">
+          <ul class="social-media dash-before grey list-inline black">
             <li><a href="#" class="fa fa-facebook"></a></li>
             <li><a href="#" class="fa fa-twitter"></a></li>
             <li><a href="#" class="fa fa-linkedin"></a></li>
@@ -341,6 +351,7 @@
             </div>
             <figure class="google-partner"><img src="images/certificates/certificate1.png" alt=""></figure>
           </div>
+          <img src="images/logos/small-logo-black.png" alt="" class="small-logo-black">
         </div>
       </div>
       <figure class="logo"><img src="" alt=""></figure>
