--- a/app/cro.html
+++ b/app/cro.html
@@ -201,7 +201,7 @@
         <section class="case-examples">
             <div class="row no-gutters">
               <div class="col-12 col-md-6">
-                <a href="">
+                <a href="/origin-global.html">
                 <div class="bg-grey"></div>
                 <img src="images/service/origin-global.jpg" alt="" class="img-fluid">
                 <div class="centered-absolute">
@@ -211,7 +211,7 @@
                 </a>
               </div>
               <div class="col-12 col-md-6">
-                <a href="">
+                <a href="/russums.html">
                 <div class="bg-grey"></div>
                 <img src="images/service/russums.jpg" alt="" class="img-fluid">
                 <div class="centered-absolute">
@@ -227,113 +227,113 @@
 
 
         <section class="contact pb-0">
-          <h2 class="fade-out">Contact</h2>
-          <div class="container">
-            <div class="row">
-              <div class="col-12 col-md-5 contact-info">
-                <h2>Get in touch</h2>
-                <div class="col-xs-6">
-                  <span class="small-grey-text">Office address</span>
-                  <p class="one-line">Ignition Search,</p>
-                  <p class="one-line">The Triangle 1, Burton</p>
-                  <p class="one-line">Road, Sheffield, S3 8BW</p>
-                </div>
-                <div class="col-xs-6">
-                  <span class="small-grey-text">Socials</span>
-                  <ul class="social-media list-inline">
-                    <li><a href="#" class="fa fa-facebook"></a></li>
-                    <li><a href="#" class="fa fa-twitter"></a></li>
-                    <li><a href="#" class="fa fa-linkedin"></a></li>
-                    <li><a href="#" class="fa fa-instagram"></a></li>
-                  </ul>
-                </div>
-                <div class="col-xs-6">
-                  <span class="small-grey-text">Contact details</span>
-                  <p class="one-line red-line">0114 272 2444</p>
-                  <p class="one-line red-line">info@ignitionsearch.co.uk</p>
-                </div>
-              </div>
-              <div class="col-12 col-md-7">
-                <div class="contact-form clearfix">
-                  <form action="#">
-                    <div class="form-row">
-                      <div class="form-group col-12 col-sm-6">
-                        <label class="col-form-label" for="name">Full Name*</label>
-                        <input class="form-control" type="text" id="name" placeholder="John Doe">
-                      </div>
-                      <div class="form-group col-12 col-sm-6">
-                        <label class="col-form-label" for="email">Email Address*</label>
-                        <input class="form-control" type="email" placeholder="hello@example.com" id="email">
-                      </div>
-                    </div>
-                    <div class="form-row">
-                      <div class="form-group col-12 col-sm-6">
-                        <label class="col-form-label" for="telephone">Telephone</label>
-                        <input class="form-control" type="text" id="telephone" placeholder="(Optional)">
-                      </div>
-                      <div class="form-group col-12 col-sm-6">
-                        <label class="col-form-label" for="company">Company</label>
-                        <input class="form-control" type="text" id="company" placeholder="(Optional)">
-                      </div>
-                    </div>
-                    <div class="form-group col-12">
-                      <label class="col-form-label" for="message">Message</label>
-                      <textarea class="form-control" name="message" id="message" cols="30" rows="10" placeholder="What can we help you with?"></textarea>
-                    </div>
-                    <button class="btn btn-submit btn-white pull-right" type="submit">Submit Message</button>
-                  </form>
-                </div>
-              </div>
-            </div>
+    <h2 class="fade-out">Contact</h2>
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12 col-md-5 contact-info">
+          <img src="images/logos/small-logo.png" alt="" class="small-logo">
+          <h2>Get in touch</h2>
+          <div class="col-xs-6">
+            <span class="small-grey-text">Office address</span>
+            <p class="one-line">The Triangle,</p>
+            <p class="one-line">1 Burton Road,</p>
+            <p class="one-line">Sheffield, S3 8BW</p>
           </div>
-        </section>
-        <!-- contact -->
+          <div class="col-xs-6">
+            <span class="small-grey-text">Socials</span>
+            <ul class="social-media list-inline">
+              <li><a href="#" class="fa fa-facebook"></a></li>
+              <li><a href="#" class="fa fa-twitter"></a></li>
+              <li><a href="#" class="fa fa-linkedin"></a></li>
+              <li><a href="#" class="fa fa-instagram"></a></li>
+            </ul>
+          </div>
+          <div class="col-xs-6">
+            <span class="small-grey-text">Contact details</span>
+            <p class="one-line dash-before">0114 272 2444</p>
+            <p class="one-line dash-before">info@ignitionsearch.co.uk</p>
+          </div>
+        </div>
+        <div class="col-xs-12 col-md-7">
+          <div class="contact-form clearfix">
+            <form method="POST" action="https://formspree.io/iustin.nitza@gmail.com">
+              <div class="form-row">
+                <div class="form-group col-xs-12 col-sm-6">
+                  <label class="col-form-label" for="name">Full Name*</label>
+                  <input class="form-control" name="name" type="text" id="name" placeholder="John Doe">
+                </div>
+                <div class="form-group col-xs-12 col-sm-6">
+                  <label class="col-form-label" for="email">Email Address*</label>
+                  <input class="form-control" type="email" name="_replyto" placeholder="hello@example.com" id="email">
+                </div>
+              </div>
+              <div class="form-row">
+                <div class="form-group col-xs-12 col-sm-6">
+                  <label class="col-form-label" for="telephone">Telephone</label>
+                  <input class="form-control" type="text" id="telephone" placeholder="(Optional)">
+                </div>
+                <div class="form-group col-xs-12 col-sm-6">
+                  <label class="col-form-label" for="company">Company</label>
+                  <input class="form-control" type="text" id="company" placeholder="(Optional)">
+                </div>
+              </div>
+              <div class="form-group col-xs-12">
+                <label class="col-form-label" for="message">Message</label>
+                <textarea class="form-control" name="message" id="message" cols="30" rows="10" placeholder="What can we help you with?"></textarea>
+              </div>
+              <button class="btn btn-submit btn-white pull-right" type="submit">Submit Message</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- contact -->
 
-        <footer>
-          <div class="container">
-            <div class="row">
-              <div class="col-12 col-md-6">
-                <h2 class="m-b-40">Be seen Be Found.</h2>
-                <span class="dash-grey"></span>
-                <ul class="social-media list-inline black">
-                  <li><a href="#" class="fa fa-facebook"></a></li>
-                  <li><a href="#" class="fa fa-twitter"></a></li>
-                  <li><a href="#" class="fa fa-linkedin"></a></li>
-                  <li><a href="#" class="fa fa-instagram"></a></li>
-                </ul>
-                <div class="info">
-                  <p class="one-line">VAT No. 981027815.</p>
-                  <p class="one-line">Company No. 06778306.</p>
-                  <p class="one-line">Ignition Search Ltd &copy; 2017. All Rights Reserved.</p>
-                </div>
-              </div>
-              <div class="col-12 col-md-6 footer-menu">
-                <div class="row">
-                  <div class="col-12 col-sm-6">
-                    <ul>
-                      <li><a href="#">Home</a></li>
-                      <li><a href="#">Our Services</a></li>
-                      <li><a href="#">Our Work</a></li>
-                      <li><a href="#">About Us</a></li>
-                      <li><a href="#">Agencies</a></li>
-                      <li><a href="#">Advice Centre</a></li>
-                      <li><a href="#">Contact Us</a></li>
-                    </ul>
-                  </div>
-                  <div class="col-12 col-sm-6">
-                    <ul>
-                      <li><a href="#">Search Engine Optimization</a></li>
-                      <li><a href="#">Pay Per Click</a></li>
-                      <li><a href="#">Conversion Rate Optimisation</a></li>
-                    </ul> 
-                  </div>
-                  <figure class="google-partner"><img src="#" alt=""></figure>
-                </div>
-              </div>
-            </div>
-            <figure class="logo"><img src="" alt=""></figure>
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12 col-md-6">
+          <h2 class="m-b-40">Be seen Be Found.</h2>
+          <ul class="social-media dash-before grey list-inline black">
+            <li><a href="https://www.facebook.com/IgnitionSearch/" target="_blank" class="fa fa-facebook"></a></li>
+            <li><a href="#" target="_blank" class="fa fa-twitter"></a></li>
+            <li><a href="#" target="_blank" class="fa fa-linkedin"></a></li>
+            <li><a href="#" target="_blank" class="fa fa-instagram"></a></li>
+          </ul>
+          <div class="info">
+            <p class="one-line">VAT No. 981027815.</p>
+            <p class="one-line">Company No. 06778306.</p>
+            <p class="one-line">Ignition Search Ltd &copy; 2017. All Rights Reserved.</p>
           </div>
-        </footer>
+        </div>
+        <div class="col-xs-12 col-md-6 footer-menu">
+          <div class="row">
+            <div class="col-xs-12 col-sm-6">
+              <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="/services.html">Our Services</a></li>
+                <li><a href="/work.html">Our Work</a></li>
+                <li><a href="/about-us.html">About Us</a></li>
+                <li><a href="/agencies.html">Agencies</a></li>
+                <li><a href="/advice-center.html">Advice Centre</a></li>
+                <li><a href="/contact.html">Contact Us</a></li>
+              </ul>
+            </div>
+            <div class="col-xs-12 col-sm-6">
+              <ul>
+                <li><a href="/seo.html">Search Engine Optimisation</a></li>
+                <li><a href="/ppc.html">Pay Per Click</a></li>
+                <li><a href="/cro.html">Conversion Rate Optimisation</a></li>
+              </ul> 
+            </div>
+            <figure class="google-partner"><img src="images/certificates/certificate1.png" alt=""></figure>
+          </div>
+          <img src="images/logos/small-logo-black.png" alt="" class="small-logo-black">
+        </div>
+      </div>
+    </div>
+  </footer>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
