--- a/app/service.html
+++ b/app/service.html
@@ -296,10 +296,10 @@
         <div class="col-xs-12 col-md-6">
           <h2 class="m-b-40">Be seen Be Found.</h2>
           <ul class="social-media dash-before grey list-inline black">
-            <li><a href="#" class="fa fa-facebook"></a></li>
-            <li><a href="#" class="fa fa-twitter"></a></li>
-            <li><a href="#" class="fa fa-linkedin"></a></li>
-            <li><a href="#" class="fa fa-instagram"></a></li>
+            <li><a href="https://www.facebook.com/IgnitionSearch/" target="_blank" class="fa fa-facebook"></a></li>
+            <li><a href="#" target="_blank" class="fa fa-twitter"></a></li>
+            <li><a href="#" target="_blank" class="fa fa-linkedin"></a></li>
+            <li><a href="#" target="_blank" class="fa fa-instagram"></a></li>
           </ul>
           <div class="info">
             <p class="one-line">VAT No. 981027815.</p>
@@ -311,20 +311,20 @@
           <div class="row">
             <div class="col-xs-12 col-sm-6">
               <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Our Services</a></li>
-                <li><a href="#">Our Work</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Agencies</a></li>
-                <li><a href="#">Advice Centre</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/services.html">Our Services</a></li>
+                <li><a href="/work.html">Our Work</a></li>
+                <li><a href="/about-us.html">About Us</a></li>
+                <li><a href="/agencies.html">Agencies</a></li>
+                <li><a href="/advice-center.html">Advice Centre</a></li>
+                <li><a href="/contact.html">Contact Us</a></li>
               </ul>
             </div>
             <div class="col-xs-12 col-sm-6">
               <ul>
-                <li><a href="#">Search Engine Optimisation</a></li>
-                <li><a href="#">Pay Per Click</a></li>
-                <li><a href="#">Conversion Rate Optimisation</a></li>
+                <li><a href="/seo.html">Search Engine Optimisation</a></li>
+                <li><a href="/ppc.html">Pay Per Click</a></li>
+                <li><a href="/cro.html">Conversion Rate Optimisation</a></li>
               </ul> 
             </div>
             <figure class="google-partner"><img src="images/certificates/certificate1.png" alt=""></figure>
@@ -332,7 +332,6 @@
           <img src="images/logos/small-logo-black.png" alt="" class="small-logo-black">
         </div>
       </div>
-      <figure class="logo"><img src="" alt=""></figure>
     </div>
   </footer>
 
