--- a/app/origin-global.html
+++ b/app/origin-global.html
@@ -240,31 +240,10 @@
 
         <!-- outcomes -->
 
-        <section class="case-examples">
-            <div class="row no-gutters">
-              <div class="col-12 col-md-6">
-                <a href="">
-                  <div class="bg-grey"></div>
-                <img src="images/service/origin-global.jpg" alt="" class="img-fluid">
-                <div class="centered-absolute">
-                  <span class="title small-grey-text">Origin Global</span>
-                  <h3>Driving the business forward following a complex Google penalty</h3>
-                </div>
-                </a>
-              </div>
-              <div class="col-12 col-md-6">
-                <a href="">
-                  <div class="bg-grey"></div>
-                <img src="images/service/russums.jpg" alt="" class="img-fluid">
-                <div class="centered-absolute">
-                  <span class="title small-grey-text">Russums </span>
-                  <h3>Delivering 25% increase year- on – year in organic traffic</h3>
-                </div>
-                </a>
-              </div>
-
-            </div>
-        </section>
+        
+            <li><a href="https://twitter.com/ignitionsearch" target="_blank" class="fa fa-twitter"></a></li>
+            <li><a href="https://uk.linkedin.com/company/ignition-search-ltd" target="_blank" class="fa fa-linkedin"></a></li>
+<li><a href="https://www.instagram.com/ignitionsearch/" target="_blank" class="fa fa-instagram"></a></li>
 
 
 
@@ -339,9 +318,10 @@
           <h2 class="m-b-40">Be seen Be Found.</h2>
           <ul class="social-media dash-before grey list-inline black">
             <li><a href="https://www.facebook.com/IgnitionSearch/" target="_blank" class="fa fa-facebook"></a></li>
-            <li><a href="#" target="_blank" class="fa fa-twitter"></a></li>
-            <li><a href="#" target="_blank" class="fa fa-linkedin"></a></li>
-            <li><a href="#" target="_blank" class="fa fa-instagram"></a></li>
+            
+            <li><a href="https://twitter.com/ignitionsearch" target="_blank" class="fa fa-twitter"></a></li>
+            <li><a href="https://uk.linkedin.com/company/ignition-search-ltd" target="_blank" class="fa fa-linkedin"></a></li>
+<li><a href="https://www.instagram.com/ignitionsearch/" target="_blank" class="fa fa-instagram"></a></li>
           </ul>
           <div class="info">
             <p class="one-line">VAT No. 981027815.</p>
