--- a/app/index.html
+++ b/app/index.html
@@ -78,7 +78,7 @@
       <div class="content-seo">
         <figure><img class="img-fluid" src="images/home/home_3.jpg" alt=""></figure>
         <div class="container">
-          <div class="slide-content">
+          <div class="slide-content col-8">
             <h2>Search Engine Optimisation</h2>
             <p><strong>Grow your brand oganically.</strong> Give your customers expert content and increase Google visibility.</p>
             <a href="/seo.html" class="btn btn-learn-more">Learn more about SEO</a>
