--- a/app/captain-cover.html
+++ b/app/captain-cover.html
@@ -28,7 +28,7 @@
       <![endif]-->
 
       <nav class="navbar transparent fixed-top">
-        <a class="navbar-brand" href="#"><img src="images/logos/logo-white-transparent.png" alt=""></a>
+        <a class="navbar-brand" href="/"><img src="images/logos/logo-white-transparent.png" alt=""></a>
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
             <a class="nav-link" href="#">Search Engine Optimisation <span class="sr-only">(current)</span></a>
@@ -173,11 +173,11 @@
           <div class="col-xs-6">
             <span class="small-grey-text">Socials</span>
             <ul class="social-media list-inline">
-              <li><a href="#" class="fa fa-facebook"></a></li>
-              <li><a href="#" class="fa fa-twitter"></a></li>
-              <li><a href="#" class="fa fa-linkedin"></a></li>
-              <li><a href="#" class="fa fa-instagram"></a></li>
-            </ul>
+            <li><a href="https://www.facebook.com/IgnitionSearch/" target="_blank" class="fa fa-facebook"></a></li>
+            <li><a href="https://twitter.com/ignitionsearch" target="_blank" class="fa fa-twitter"></a></li>
+            <li><a href="https://uk.linkedin.com/company/ignition-search-ltd" target="_blank" class="fa fa-linkedin"></a></li>
+<li><a href="https://www.instagram.com/ignitionsearch/" target="_blank" class="fa fa-instagram"></a></li>
+          </ul>
           </div>
           <div class="col-xs-6">
             <span class="small-grey-text">Contact details</span>
@@ -212,7 +212,7 @@
                 <label class="col-form-label" for="message">Message</label>
                 <textarea class="form-control" name="message" id="message" cols="30" rows="10" placeholder="What can we help you with?"></textarea>
               </div>
-              <button class="btn btn-submit btn-white pull-right" type="submit">Submit Message</button>
+              <button class="btn btn-submit btn-orange pull-right" type="submit">Submit Message</button>
             </form>
           </div>
         </div>
