--- a/app/contact.html
+++ b/app/contact.html
@@ -27,21 +27,8 @@
       <![endif]-->
 
       <nav class="navbar transparent fixed-top">
-        <a class="navbar-brand" href="#"><img src="images/logos/logo-white-transparent.png" alt=""></a>
+        <a class="navbar-brand" href="/"><img src="images/logos/logo-white-transparent.png" alt=""></a>
         <ul class="navbar-nav ml-auto">
-<<<<<<< HEAD
-        <li class="nav-item active">
-          <a class="nav-link" href="#" data-hover="Search Engine Optimisation">Search Engine Optimisation <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#" data-hover="Pay Per Click">Pay Per Click</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#" data-hover="Conversion Rate Optimisation">Conversion Rate Optimisation</a>
-        </li>
-      </ul>
-        <a class="mobile bold d-none" tel="#">0114 272 2444</a>
-=======
           <li class="nav-item active">
             <a class="nav-link" href="#">Search Engine Optimisation <span class="sr-only">(current)</span></a>
           </li>
@@ -52,9 +39,7 @@
             <a class="nav-link" href="#">Conversion Rate Optimisation</a>
           </li>
         </ul>
-        <a class="mobile bold d-none" href="+01142722444">0114 272 2444</a>
->>>>>>> 913f1f1b1a947efc6e8477c60f0b725fcd95b893
-        
+        <a class="mobile bold d-none" href="+01142722444">0114 272 2444</a>        
         <div class="sidenav">
           <ul class="nav-links">
             <li><a href="/">Home</a></li>
@@ -80,15 +65,6 @@
 
       <header>
         <div class="content">
-        <!-- 
-          <svg width="1920" height="1080" viewBox="0 0 1920 1080">
-            <defs>
-              <mask id="hero-mask">
-                <image width="1920" height="1080" xlink:href="images/mask.png"/>
-              </mask>
-            </defs>
-            <image mask="url(#hero-mask)" width="1920" height="1080" xlink:href="images/hero1.jpg"/>
-          </svg> -->
           <div class="bg-black"></div>
           <figure><img class="img-fluid" src="images/contact.jpg" alt=""></figure>
           <div class="container p-absolute">
