--- a/app/drum.html
+++ b/app/drum.html
@@ -28,8 +28,8 @@
     <![endif]-->
 
    <nav class="navbar fixed-top white-menu">
-        <a class="navbar-brand" href="#"><img src="images/logos/logo-white-transparent.png" alt=""></a>
-        <a class="navbar-brand red-logo" href="#"><img src="images/logos/red-transparent.png" alt=""></a>
+        <a class="navbar-brand" href="/"><img src="images/logos/logo-white-transparent.png" alt=""></a>
+        <a class="navbar-brand red-logo" href="/"><img src="images/logos/red-transparent.png" alt=""></a>
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
             <a class="nav-link" href="#">Search Engine Optimisation <span class="sr-only">(current)</span></a>
@@ -162,7 +162,7 @@
                     <textarea class="form-control" name="message" id="message" cols="30" rows="10" placeholder="What can we help you with?"></textarea>
                   </div>
                 </div>
-                <button class="btn btn-submit btn-white pull-right" type="submit">Submit Message</button>
+                <button class="btn btn-submit btn-orange pull-right" type="submit">Submit Message</button>
               </form>
             </div>
           </div>
