--- a/app/index.html
+++ b/app/index.html
@@ -37,7 +37,7 @@
     <![endif]-->
     
     <nav class="navbar transparent fixed-top">
-      <a class="navbar-brand" href="#"><img src="images/logos/logo-white-transparent.png" alt=""></a>
+      <a class="navbar-brand" href="/"><img src="images/logos/logo-white-transparent.png" alt=""></a>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
           <a class="nav-link" href="#" data-hover="Search Engine Optimisation">Search Engine Optimisation <span class="sr-only">(current)</span></a>
@@ -264,11 +264,11 @@
           <div class="col-xs-6">
             <span class="small-grey-text">Socials</span>
             <ul class="social-media list-inline">
-              <li><a href="#" class="fa fa-facebook"></a></li>
-              <li><a href="#" class="fa fa-twitter"></a></li>
-              <li><a href="#" class="fa fa-linkedin"></a></li>
-              <li><a href="#" class="fa fa-instagram"></a></li>
-            </ul>
+            <li><a href="https://www.facebook.com/IgnitionSearch/" target="_blank" class="fa fa-facebook"></a></li>
+            <li><a href="https://twitter.com/ignitionsearch" target="_blank" class="fa fa-twitter"></a></li>
+            <li><a href="https://uk.linkedin.com/company/ignition-search-ltd" target="_blank" class="fa fa-linkedin"></a></li>
+<li><a href="https://www.instagram.com/ignitionsearch/" target="_blank" class="fa fa-instagram"></a></li>
+          </ul>
           </div>
           <div class="col-xs-6">
             <span class="small-grey-text">Contact details</span>
@@ -303,7 +303,7 @@
                 <label class="col-form-label" for="message">Message</label>
                 <textarea class="form-control" name="message" id="message" cols="30" rows="10" placeholder="What can we help you with?"></textarea>
               </div>
-              <button class="btn btn-submit btn-white pull-right" type="submit">Submit Message</button>
+              <button class="btn btn-submit btn-orange pull-right" type="submit">Submit Message</button>
             </form>
           </div>
         </div>
@@ -319,7 +319,6 @@
           <h2 class="m-b-40">Be seen Be Found.</h2>
           <ul class="social-media dash-before grey list-inline black">
             <li><a href="https://www.facebook.com/IgnitionSearch/" target="_blank" class="fa fa-facebook"></a></li>
-            
             <li><a href="https://twitter.com/ignitionsearch" target="_blank" class="fa fa-twitter"></a></li>
             <li><a href="https://uk.linkedin.com/company/ignition-search-ltd" target="_blank" class="fa fa-linkedin"></a></li>
 <li><a href="https://www.instagram.com/ignitionsearch/" target="_blank" class="fa fa-instagram"></a></li>
